--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.nsm2021_smartwheelchair_mobileapp">
    <application
-        android:label="nsm2021_smartwheelchair_mobileapp"
+        android:label="Smart WheelChair"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
