--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.8
+version: 1.0.9+69
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -30,6 +30,7 @@ dependencies:
   cupertino_icons: ^1.0.2
 
   url_launcher: ^6.0.9
+  package_info: ^2.0.2
 
 flutter_icons:
   android: true
