--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.9+69
+version: 1.0.10
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -34,7 +34,7 @@ dependencies:
 
 flutter_icons:
   android: true
-  image_path: "image/jojo_wrychair.png"
+  image_path: "assets/images/jojo_wrychair.png"
 
 dev_dependencies:
   flutter_test:
@@ -54,9 +54,9 @@ flutter:
   fonts:
     - family: Anakotmai
       fonts:
-        - asset: fonts/Anakotmai-Light.ttf
+        - asset: assets/fonts/Anakotmai-Light.ttf
           weight: 300
-        - asset: fonts/Anakotmai-Medium.ttf
+        - asset: assets/fonts/Anakotmai-Medium.ttf
           weight: 400
-        - asset: fonts/Anakotmai-Bold.ttf
+        - asset: assets/fonts/Anakotmai-Bold.ttf
           weight: 700
