flutter launcher icons on iOS

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
 
 flutter_icons:
   android: true
+  ios: true
+  remove_alpha_ios: true
   image_path: "assets/images/jojo_wrychair.png"
 
 dev_dependencies:
