--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_launcher_icons: ^0.9.0
+  flutter_launcher_icons: ^0.9.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -31,6 +31,8 @@ dependencies:
 
   url_launcher: ^6.0.9
   package_info: ^2.0.2
+  path: ^1.8.0
+  path_provider: ^2.0.2
 
 flutter_icons:
   android: true
