--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.nsm2021_smartwheelchair_mobileapp">
+    package="com.leomotorsth.nsm2021_smartwheelchair_mobileapp">
    <application
         android:label="Smart WheelChair"
         android:icon="@mipmap/ic_launcher">
