--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.12
+version: 1.0.14
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -33,6 +33,7 @@ dependencies:
   package_info: ^2.0.2
   path: ^1.8.0
   path_provider: ^2.0.2
+  flutter_automation: ^2.0.0
 
 flutter_icons:
   android: true
