--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+
   flutter_launcher_icons: ^0.9.1
 
   # The following adds the Cupertino Icons font to your application.
@@ -34,6 +35,7 @@ dependencies:
   path: ^1.8.0
   path_provider: ^2.0.2
   flutter_automation: ^2.0.0
+  flutter_bluetooth_serial: ^0.3.2
 
 flutter_icons:
   android: true
