--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.17
+version: 1.0.18
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -36,6 +36,7 @@ dependencies:
   path_provider: ^2.0.2
   flutter_automation: ^2.0.0
   flutter_bluetooth_serial: ^0.3.2
+  provider: ^5.0.0
 
 flutter_icons:
   android: true
