--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.105
+version: 1.0.106
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -37,6 +37,7 @@ dependencies:
   provider: ^5.0.0
   path: ^1.8.0
   path_provider: ^2.0.2
+  pin_code_fields: ^7.3.0
 
 flutter_icons:
   android: true
